# know-lang

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  configuration.md  full_requirements.txt  hf_transformers_demo.py  pyproject.toml  requirements.txt  simple_requirements.txt
.github/workflows/: pytest.yml
chromadb/know-lang-bot-ollama-mxbai-embed-large/: chroma.sqlite3
chromadb/transformers-ollama-mxbai-embed-large-with-code/: chroma.sqlite3
chromadb/transformers-ollama-mxbai-embed-large-with-code/536ab435-c5d3-4bb3-a2d4-fb6e69910633/: index_metadata.pickle
chromadb/transformers-ollama-mxbai-embed-large/b32db9e6-88a7-49d4-b35f-aee9e27cb47a/: index_metadata.pickle
chromadb/transformers-openai-text-embedding-ada-002/: chroma.sqlite3
chromadb/transformers-openai-text-embedding-ada-002-with-code/: chroma.sqlite3
chromadb/transformers-openai-text-embedding-ada-002-with-code/43ee4cc8-1eea-45c9-a8ed-d35f802f8ea2/: index_metadata.pickle
chromadb/transformers-openai-text-embedding-ada-002/954e71b7-12b2-42b6-8938-771d133f73a1/: index_metadata.pickle
chromadb/transformers-voyage-voyage-code-3/: chroma.sqlite3
chromadb/transformers-voyage-voyage-code-3-with-code/8b1aa7a1-ab3a-481d-93f0-d3cfe1102024/: index_metadata.pickle
parser/: parse.py
settings/: .env.example.app  .env.example.github  .gitignore
src/know_lang_bot/: __main__.py  config.py
src/know_lang_bot/chat_bot/: __main__.py  chat_agent.py  chat_config.py  chat_graph.py  chat_interface.py  feedback.py  gradio_demo.py  run.py
src/know_lang_bot/code_parser/: parser.py  summarizer.py
src/know_lang_bot/configs/: chat_config.py  config.py
src/know_lang_bot/core/: types.py
src/know_lang_bot/evaluation/: chatbot_evaluation.py  chatbot_evaluation_visualize.py  embedding_evaluation.py
src/know_lang_bot/models/: batch_request.py  embeddings.py  huggingface.py
src/know_lang_bot/parser/: factory.py
src/knowlang/: __init__.py  __main__.py
tests/: conftest.py  test_constants.py  test_parser.py  test_summarizer.py
tests/api/: test_api_model_registry.py
tests/chat/: conftest.py  test_chat_graph.py  test_chat_interface.py
tests/indexing/: mock_state_store.py  test_chunk_indexer.py  test_codebase_manager.py  test_incremental_update.py  test_indexing_agent.py  test_state_manager.py
tests/parser/: test_python_parser.py
tests/summarizer/: test_summarizer.py
transformers/: chroma.sqlite3
utils/: fancy_log.py
(+76 files in other folders)
