[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
[project]
name = "know_lang_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "gabhyun kim",email = "kimgb415@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pydantic-ai (>=0.0.20,<0.0.21)",
    "gitpython (>=3.1.44,<4.0.0)",
    "tree-sitter (>=0.24.0,<0.25.0)",
    "tree-sitter-python (>=0.23.6,<0.24.0)"
]

[tool.poetry]
packages = [
    { include = "know_lang_bot", from="src" },
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

